--- a/css_page_18.html
+++ b/css_page_18.html
@@ -8,11 +8,9 @@
     <body>
         <div>
             <h1>Use class</h1>
-            <p>
-                Wikipedia is a free online encyclopedia featuring openly editable content created and sourced by users from around the world.  
-                Wikipedia is a free online encyclopedia featuring openly editable content created and sourced by users from around the world. 
-                Wikipedia is a free online encyclopedia featuring openly editable content created and sourced by users from around the world.  
-            </p>
+             <p>Wikipedia is a free online encyclopedia featuring openly editable content created and sourced by users from around the world.</p>
+             <p>Wikipedia is a free online encyclopedia featuring openly editable content created and sourced by users from around the world.</p>
+             <p>Wikipedia is a free online encyclopedia featuring openly editable content created and sourced by users from around the world.</p>
         </div>
     </body>
 </html>
