--- a/css_page_18.html
+++ b/css_page_18.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial- scale=1.0">
-<link view="stylesheet" href="https://elalitvin.github.io/css_page_18.css">
+<link rel="stylesheet" href="https://elalitvin.github.io/css_page_18.css">
    </head> 
     <body>
         <div>
