--- a/wikipedia.html
+++ b/wikipedia.html
@@ -12,10 +12,10 @@
     <div>
         <h1>Use class</h1>
         <p>Wikipedia is a free online encyclopedia featuring openly editable content created and sourced by users from
-            around the world. <br>
-        Wikipedia is a free online encyclopedia featuring openly editable content created and sourced by users from
-            around the world. <br>
-        Wikipedia is a free online encyclopedia featuring openly editable content created and sourced by users from
+            around the world.</p> <br>
+        <p>Wikipedia is a free online encyclopedia featuring openly editable content created and sourced by users from
+            around the world.</p> <br>
+        <p>Wikipedia is a free online encyclopedia featuring openly editable content created and sourced by users from
             around the world. </p>
     </div>
 </body>
