--- a/wikipedia.html
+++ b/wikipedia.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WikipediA</title>
-    <link rel="stylesheet" href="https://github.com/elalitvin/elalitvin.github.io/blob/main/wikipedia.css">
+    <link rel="stylesheet" href="wikipedia.css">
 </head>
 
 <body>
     <div>
         <h1>Use class</h1>
         <p>Wikipedia is a free online encyclopedia featuring openly editable content created and sourced by users from
-            around the world.</p> <br>
+            around the world.</p> 
         <p>Wikipedia is a free online encyclopedia featuring openly editable content created and sourced by users from
-            around the world.</p> <br>
+            around the world.</p> 
         <p>Wikipedia is a free online encyclopedia featuring openly editable content created and sourced by users from
             around the world. </p>
     </div>
