--- a/firstExDivs.html
+++ b/firstExDivs.html
@@ -23,7 +23,7 @@
             float: left;
             width: 100px;
             height: 300px;
-            margin-left: auto;
+            margin-left: 35%;
             background-color: yellow;
         }
         
