--- a/firstExDivs.html
+++ b/firstExDivs.html
@@ -6,8 +6,10 @@
     <style>
         .forth { 
             display: inline-block;
+            position: absolute;
             background-color: blue;
-            width: 100px;
+            right:0%;
+            left:0%;
             border: 5px solid red;
         }
         .first { 
@@ -23,7 +25,7 @@
             float: left;
             width: 100px;
             height: 300px;
-            margin-left: 50%;
+            margin-left: 40%;
             background-color: yellow;
         }
         
@@ -33,6 +35,7 @@
             width: 100px;
             height: 300px;
             background-color: yellow;
+            position:relative;
         }
         
         .fifth { 
@@ -57,7 +60,7 @@
                         <li>C</li>
                     </ul>
                 </center>
-                </div>
+            </div>
             </div>
         </body>
 </html>
