--- a/firstExDivs.html
+++ b/firstExDivs.html
@@ -8,8 +8,8 @@
             display: inline-block;
             position: absolute;
             background-color: blue;
-            right:0%;
-            left:0%;
+            width: inherit;
+            
             border: 5px solid red;
         }
         .first { 
