--- a/firstExDivs.html
+++ b/firstExDivs.html
@@ -8,7 +8,7 @@
             display: inline-block;
             position: absolute;
             background-color: blue;
-            width: inherit;
+            left: 0px;
             
             border: 5px solid red;
         }
