--- a/firstExDivs.html
+++ b/firstExDivs.html
@@ -9,7 +9,7 @@
             position: absolute;
             background-color: blue;
             left: 0px;
-            
+            right: 0px;
             border: 5px solid red;
         }
         .first { 
