--- a/firstExDivs.html
+++ b/firstExDivs.html
@@ -8,8 +8,8 @@
             display: inline-block;
             position: absolute;
             background-color: blue;
-            left: 0px;
-            right: 0px;
+            margin-left: 0px;
+            margin-right: 0px;
             border: 5px solid red;
         }
         .first { 
