--- a/wikipedia.html
+++ b/wikipedia.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WikipediA</title>
-    <link rel="stylesheet" href="https://github.com/elalitvin/elalitvin.github.io/blob/main/wikipedia.css">
+    <link rel="stylesheet" href="https://elalitvin.github.io/wikipedia.css">
 </head>
 
 <body>
