--- a/Presentation5Page34Navbar.html
+++ b/Presentation5Page34Navbar.html
@@ -14,42 +14,22 @@
 </head>
 
 <body>
-    
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">My Brand</a>
-            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarScroll">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="d-flex">
-                <a class="navbar-brand" href="#">Home</a>
-                <a class="navbar-brand" href="#">About</a>
-                <a class="navbar-brand" href="#">Contacts</a>
-                <a class="navbar-brand" href="#">Info</a>
-              
-            </div>
-        </div>
-    </nav>
+            </button>
 
 
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-
-
-
-
-
-
-    <hr>
-    <nav class="navbar">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">My Brand</a>
-
-            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarScroll">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-
-            <div class="collapse navbar-collapse" id="navbarScroll">
-                <ul class="navbar-nav" >
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <!--instead of "ME" there is "MS" because s - (start) for classes that set margin-left or padding-left in LTR, margin-right or padding-right in RTL
+                    e - (end) for classes that set margin-right or padding-right in LTR, margin-left or padding-left in RTL-->
                     <li class="nav-item">
                         <a class="nav-link" href="#">Home</a>
                     </li>
@@ -57,15 +37,24 @@
                         <a class="nav-link" href="#">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Content</a>
+                        <a class="nav-link" href="#">Contacts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Info</a>
                     </li>
-                </ul>
+
             </div>
+
         </div>
     </nav>
+
+    <pre>
+    Row 30 - instead of "ME" there is "MS" because
+    s - (start) for classes that set margin-left or padding-left in LTR, margin-right or padding-right in RTL
+    e - (end) for classes that set margin-right or padding-right in LTR, margin-left or padding-left in RTL
+
+    </pre>
+
 
 
 </body>
