--- a/BootstrapFormExPresentation6Page16.html
+++ b/BootstrapFormExPresentation6Page16.html
@@ -15,7 +15,7 @@
 
 <body>
     <h1 style="margin-left: 10%; margin-right: 10%;">Create New Account</h1>
-    <form style="margin-left: 10%; margin-right: 10%;">
+    <form style="margin-left: 10%; margin-right: 10%;" action="#">
         <div class="mb-3">
             <label for="exampleInputFirstName" class="form-label">First Name</label>
             <input type="text" class="form-control" id="exampleInputFirstName" placeholder="First Name">
