--- a/HTMLMODULE1HomeExercise.html
+++ b/HTMLMODULE1HomeExercise.html
@@ -102,11 +102,9 @@
     <li>Change My Mind</li>
 </ul>
 <hr>
-<img src="C:\Users\ela_l\OneDrive\Images\Saved Pictures\butterfly1.jpg">
-<!--<img src="https://cff2.earth.com/uploads/2020/04/15185613/shutterstock_350754023.jpg">-->
-<hr>
+<p style="background-color: yellow;">I need please help with it, dint understand why not all the links work with &lt;video&GT; tag :(</p>
 <video width="300px" height="200px" controls="controls">
-    <source src="https://img-9gag-fun.9cache.com/photo/aWG5pgn_460svvp9.webm" type="video/mp4">
+    <source src="https://img-9 gag-fun.9cache.com/photo/aWG5pgn_460svvp9.webm" type="video/mp4">
 </video><br>
 
 <video width="400px" height="300px" controls="controls">  <!--I dont understand why it doesnt work-->
