--- a/HTMLMODULE3HomeExercise.html
+++ b/HTMLMODULE3HomeExercise.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML & CSS 1</title>
     <link rel="stylesheet" href="HTMLMODULE3HomeExercise.css">
 </head>
+
 <body>
     <h1 class="HomeWork">EXERSICE 1 - Write a HTML and CSS code the implement the following:</h1>
-    <div class="HomeWork">
-    <p id="FirstEx"><span>Cascading Style Sheets is a stylesheet language used to describe the presentation of a document written in HTML or XML.</span></p></div>
+    <p id="FirstEx">Cascading Style Sheets is a stylesheet language used to describe the presentation of a document
+        written in HTML or XML.</p><br>
+<p>I have tried to write the task in two different ways.</p>
+    <div class="DivFirstEx">
+        <p id="FirstEx1">Cascading Style Sheets is a stylesheet language used to describe the presentation of a document
+            written in HTML or XML.</p>
+    </div>
+
     <br><br>
+
+
     <h1 class="HomeWork">EXERSICE 2 - Attached a link to wikipedia for each cocktail. By using only CSS operations:</h1>
     <h4 class="HomeWork">a - Remove underlines from links</h4>
     <h4 class="HomeWork">b - strikethrough drink elements</h4>
+    <p id="secondEx">The <a href="https://www.thespruceeats.com/moscow-mule-recipe-759741" target="_blank">Moscow Mule</a> is a cocktail made with <span>vodka</span>, spicy <span>ginger</span> beer, and <span>lime</span> juice.<br>The <a href="https://www.allrecipes.com/recipe/228491/the-real-long-island-iced-tea/" target="_blank">Long Island Ice Tea</a> is a type of cocktail typically made with <span>vodka, tequila</span>, lighr <span>rum</span>, triple sec, <span>gin</span>, and splash of <span>cola</span>.</p>
 </body>
+
 </html>
