--- a/HTMLMODULE3HomeExercise.html
+++ b/HTMLMODULE3HomeExercise.html
@@ -12,7 +12,7 @@
     <h1 class="HomeWork">EXERSICE 1 - Write a HTML and CSS code the implement the following:</h1>
     <p id="FirstEx">Cascading Style Sheets is a stylesheet language used to describe the presentation of a document
         written in HTML or XML.</p><br>
-<p>I have tried to write the task in two different ways.</p>
+    <p>I have tried to write the task in two different ways.</p>
     <div class="DivFirstEx">
         <p id="FirstEx1">Cascading Style Sheets is a stylesheet language used to describe the presentation of a document
             written in HTML or XML.</p>
@@ -24,7 +24,41 @@
     <h1 class="HomeWork">EXERSICE 2 - Attached a link to wikipedia for each cocktail. By using only CSS operations:</h1>
     <h4 class="HomeWork">a - Remove underlines from links</h4>
     <h4 class="HomeWork">b - strikethrough drink elements</h4>
-    <p id="secondEx">The <a href="https://www.thespruceeats.com/moscow-mule-recipe-759741" target="_blank">Moscow Mule</a> is a cocktail made with <span>vodka</span>, spicy <span>ginger</span> beer, and <span>lime</span> juice.<br>The <a href="https://www.allrecipes.com/recipe/228491/the-real-long-island-iced-tea/" target="_blank">Long Island Ice Tea</a> is a type of cocktail typically made with <span>vodka, tequila</span>, lighr <span>rum</span>, triple sec, <span>gin</span>, and splash of <span>cola</span>.</p>
+    <p id="secondEx">The <a href="https://www.thespruceeats.com/moscow-mule-recipe-759741" target="_blank">Moscow
+            Mule</a> is a cocktail made with <span>vodka</span>, spicy <span>ginger</span> beer, and <span>lime</span>
+        juice.<br>The <a href="https://www.allrecipes.com/recipe/228491/the-real-long-island-iced-tea/"
+            target="_blank">Long Island Ice Tea</a> is a type of cocktail typically made with <span>vodka,
+            tequila</span>, lighr <span>rum</span>, triple sec, <span>gin</span>, and splash of <span>cola</span>.</p>
+    <br><br>
+
+    <h1 class="HomeWork">EXERSICE 3 - Choose 3 sentences:</h1>
+    <p class="HomeWork">Transform them to uppercase by using only css operations. Each sentence should be in the center
+        of the page.</p>
+    <p id="ThirdEx">Tel Aviv Yaffo often referred to as just Tel Aviv, is the most populous city in the Gush Dan
+        metropolitan area of Israel. <br>
+        Paris is the capital and most populous city of France, with the estimated population of 2,165,423 residents as
+        of 1 January 2022. <br>
+        London is the capital and largest city of England and the United Kingdom.</p>
+    <br><br>
+
+    <h1 class="HomeWork">EXERSICE 4 - Download the provided dog picture to your computer.</h1>
+    <p class="HomeWork"> Write HTML and CSS code that implement the following:
+        For the picture part use it from your own computer (not with a web link):</p>
+    <div class="ex4CSS-grid-container">
+        <div class="theDOG-grid-item"><caption >DOG</caption></div>
+        <div class="theDOGex4-grid-item"> <img id="theDOG4exx" src="DogPicHomeworkCSS1ex4.jpg" ></div>
+        <div class="mar4Ex"> <p><br></p>  </div>
+    </div>
+    <p>another way to answer</p>
+    <div class="ex4CSS1-grid-container">
+        <div class="theDOG1"><caption>DOG</caption></div>
+        <div class="theDOGex41-grid-item"> <img id="theDOG4exx" src="DogPicHomeworkCSS1ex4.jpg" ></div>
+    </div>
+    <br><br>
+
+    <h1 class="HomeWork">EXERSICE 5 - Download the provided star pictures to your computer.</h1>
+    <p class="HomeWork"> Write HTML and CSS code that implement the following:
+        For the picture part use it from your own computer (not with a web link):</p>
 </body>
 
 </html>
