--- a/HTMLMODULE3HomeExercise.html
+++ b/HTMLMODULE3HomeExercise.html
@@ -59,6 +59,9 @@
     <h1 class="HomeWork">EXERSICE 5 - Download the provided star pictures to your computer.</h1>
     <p class="HomeWork"> Write HTML and CSS code that implement the following:
         For the picture part use it from your own computer (not with a web link):</p>
+        <div class="universeALLcss1Ex5">
+            
+        </div>
 </body>
 
 </html>
