--- a/HTMLMODULE3HomeExercise.html
+++ b/HTMLMODULE3HomeExercise.html
@@ -45,22 +45,47 @@
     <p class="HomeWork"> Write HTML and CSS code that implement the following:
         For the picture part use it from your own computer (not with a web link):</p>
     <div class="ex4CSS-grid-container">
-        <div class="theDOG-grid-item"><caption >DOG</caption></div>
-        <div class="theDOGex4-grid-item"> <img id="theDOG4exx" src="DogPicHomeworkCSS1ex4.jpg" ></div>
-        <div class="mar4Ex"> <p><br></p>  </div>
+        <div class="theDOG-grid-item">
+            <caption>DOG</caption>
+        </div>
+        <div class="theDOGex4-grid-item"> <img id="theDOG4exx" src="DogPicHomeworkCSS1ex4.jpg"></div>
+        <div class="mar4Ex">
+            <p><br></p>
+        </div>
     </div>
     <p>another way to answer</p>
     <div class="ex4CSS1-grid-container">
-        <div class="theDOG1"><caption>DOG</caption></div>
-        <div class="theDOGex41-grid-item"> <img id="theDOG4exx" src="DogPicHomeworkCSS1ex4.jpg" ></div>
+        <div class="theDOG1">
+            <caption>DOG</caption>
+        </div>
+        <div class="theDOGex41-grid-item"> <img id="theDOG4exx" src="DogPicHomeworkCSS1ex4.jpg"></div>
     </div>
     <br><br>
 
     <h1 class="HomeWork">EXERSICE 5 - Download the provided star pictures to your computer.</h1>
     <p class="HomeWork"> Write HTML and CSS code that implement the following:
         For the picture part use it from your own computer (not with a web link):</p>
-        <div class="universeALLcss1Ex5">
-            
+    <div class="universeALLcss1Ex5-container">
+        <div class="universeALLcss1Ex5-cont">
+            <div>
+                <img class="imgJupiterEx5-grid-item" src="jupiterCSS1ex5.jpeg">
+            </div>
+            <div>
+                <img class="imgEarthEx5-grid-item" src="earthCSS1ex5.jpeg">
+            </div>
+            <div>
+                <img class="imgMarsEx5-grid-item" src="marsCSS1ex5.jpeg">
+            </div>
+        </div>
+    </div>
+
+    <h1 class="HomeWork">EXERSICE 6 - Download the provided star pictures to your computer.</h1>
+    <p class="HomeWork"> Write HTML and CSS code that implement the following:
+        Create 3 white circle:</p>
+        <div class="universeEx6">
+            <br><br><div class="circle1"></div>
+            <div class="circle2"></div>
+            <div class="circle3"></div>
         </div>
 </body>
 
