--- a/HTMLMODULE3HomeExercise.html
+++ b/HTMLMODULE3HomeExercise.html
@@ -82,11 +82,122 @@
     <h1 class="HomeWork">EXERSICE 6 - Download the provided star pictures to your computer.</h1>
     <p class="HomeWork"> Write HTML and CSS code that implement the following:
         Create 3 white circle:</p>
-        <div class="universeEx6">
-            <br><br><div class="circle1"></div>
-            <div class="circle2"></div>
-            <div class="circle3"></div>
-        </div>
+    <div class="universeEx6">
+        <br><br>
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+        <div class="circle3"></div>
+    </div>
+
+    <h1 class="HomeWork">EXERSICE 7 - Use the 3 squares from the picture folder: red, white and black and reproduce the
+        image
+        below.</h1>
+    <p class="HomeWork"> HINT
+        for html &lt;table&gt;&lt;/table&gt;, &lt;img&gt;
+        for css : use border-collapse for the table, width and height for the img 30px:</p>
+
+    <table class="heartTableEx7">
+        <tr>
+            <td class="tdWhite"></td>
+            <td class="tdWhite"></td>
+            <td class="tdBlack"></td>
+            <td class="tdBlack"></td>
+            <td class="tdWhite"></td>
+            <td class="tdBlack"></td>
+            <td class="tdBlack"></td>
+            <td class="tdWhite"></td>
+            <td class="tdWhite"></td>
+        </tr>
+        <tr>
+            <td class="tdWhite"></td>
+            <td class="tdBlack"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdBlack"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdBlack"></td>
+            <td class="tdWhite"></td>
+        </tr>
+        <tr>
+            <td class="tdBlack"></td>
+            <td class="tdRed"></td>
+            <td class="tdWhite"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdBlack"></td>
+        </tr>
+        <tr>
+            <td class="tdBlack"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+        </tr>
+        <tr>
+            <td class="tdBlack"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdBlack"></td>
+        </tr>
+        <tr>
+            <td class="tdWhite"></td>
+            <td class="tdBlack"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdBlack"></td>
+            <td class="tdWhite"></td>
+        </tr>
+        <tr>
+            <td class="tdWhite"></td>
+            <td class="tdWhite"></td>
+            <td class="tdBlack"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdRed"></td>
+            <td class="tdBlack"></td>
+            <td class="tdWhite"></td>
+            <td class="tdWhite"></td>
+        </tr>
+        <tr>
+            <td class="tdWhite"></td>
+            <td class="tdWhite"></td>
+            <td class="tdWhite"></td>
+            <td class="tdBlack"></td>
+            <td class="tdRed"></td>
+            <td class="tdBlack"></td>
+            <td class="tdWhite"></td>
+            <td class="tdWhite"></td>
+            <td class="tdWhite"></td>
+        </tr>
+        <tr>
+            <td class="tdWhite"></td>
+            <td class="tdWhite"></td>
+            <td class="tdWhite"></td>
+            <td class="tdWhite"></td>
+            <td class="tdBlack"></td>
+            <td class="tdWhite"></td>
+            <td class="tdWhite"></td>
+            <td class="tdWhite"></td>
+            <td class="tdWhite"></td>
+        </tr>
+
+    </table>
 </body>
 
 </html>
