--- a/HTMLMODULEHomeExercise5.html
+++ b/HTMLMODULEHomeExercise5.html
@@ -68,10 +68,10 @@
         <div id="navsgroup" class="my-3">
             <div id="greynav" class="navbar bg-dark p-1" role="navigation" ><p>Nav</p><button class="btn btn-outline-success">button</button></div>
             <div id="bluenav" class="navbar bg-primary p-1" role="navigation"><p>Nav</p><button class="btn btn-outline-danger">button</button></div>
-            <div id="pinknav" class="navbar p-1" role="navigation" style="background-color: pink;"><p>Nav</p><button class="btn btn-outline-light">button</button></div>
+            <div id="pinknav" class="navbar bg-danger-subtle p-1" role="navigation"><p>Nav</p><button class="btn btn-outline-light">button</button></div>
         </div>
-        <p>Sorry, I dont know how to make last nav pink by Bootstrap</p>
-        <p class="h4">Disable button</p>
+        
+        <p class="h4 my-4">Disable button</p>
         <button class="btn btn-success disabled">button</button>
 
 
