--- a/HTMLMODULEHomeExercise6.html
+++ b/HTMLMODULEHomeExercise6.html
@@ -8,7 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1 style="color: red">EXERCISE 1</h1>
+    <h1 style="color: red">EXERCISE 1></h1>
+    <h2><p>a - Create the following style using Bootstrap:</p></h2>
     
 </body>
 </html>
