--- a/HTMLMODULEHomeExercise6.html
+++ b/HTMLMODULEHomeExercise6.html
@@ -10,6 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+
+
     <style>
 
     </style>
@@ -225,26 +227,104 @@
             </div>
         </div>
     </div>
+
+
     <br><br>
     <h1 style="color: red">EXERCISE 3 </h1>
     <h4 style="color: red">Create this responsive content with different view for the mobile, tablet and desktop screen:
     </h4>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
+                <div class="p-5 my-3 border bg-warning"></div>
+            </div>
+            <div class="col col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                <div class="p-5 my-3 border bg-warning"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col col-12">
+                <div class="p-5 my-3 border bg-danger"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+                <div class="p-5 my-3 border bg-info"></div>
+            </div>
+            <div class="col col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
+                <div class="p-5 my-3 border bg-info"></div>
+            </div>
+            <div class="d-none d-sm-none d-md-none d-lg-block col-lg-4 col-xl-4">
+                <div class="p-5 my-3 border bg-info"></div>
+            </div>
+        </div>
+    </div>
+    <br><br>
+
+
+
+
+    <h1 style="color: red">EXERCISE 4 </h1>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-12">
+                <div class="p-5 p-sm-5 p-md-4 p-lg-4  border bg-danger"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col col-12 col-sm-12 col-md-9 col-lg-12 order-lg-1 order-md-1 order-sm-2 order-2">
+                <div class="p-5  border bg-warning "></div>
+            </div>
+            <div class="col col-12 col-sm-12 col-md-12 col-lg-9 order-lg-2 order-md-3 order-sm-1 order-1">
+                <div class="row">
+                    <div class="col w-lg-6 w-md-12 w-sm-12">
+                        <div class="p-5 my-1 border" style="background-color: yellow"></div>
+                    </div>
+                    <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6">
+                        <div class="p-5 my-1 border" style="background-color: yellow"></div>
+                    </div>
+                    <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6">
+                        <div class="p-5 my-1 border" style="background-color: yellow"></div>
+                    </div>
+                    <div class="d-none d-sm-none d-md-none d-lg-block col-lg-6">
+                        <div class="p-5 my-1 border" style="background-color: yellow"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-12 col-sm-12 col-md-3 col-lg-3 order-lg-3 order-md-2 order-sm-3 order-3">
+                <div class="p-5  border bg-success " style="height: 150px"></div>
+            </div>
+
+            <div class="col col-12 col-sm-12 col-md-12 col-lg-3 order-5">
+                <div class="p-5  borde" style="background-color: blue; position: relative;"></div>
+            </div>
+
+            <div class="col col-12 col-sm-12 col-md-12 col-lg-9 order-4">
+                <div class="p-5  border" style="background-color: fuchsia;"></div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
+        integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"
+        async></script>
+    <!-- masomry doesnt work    data-masonry='{"percentPosition": true }' has to be near the row element-->
+<br><br>
+<h3>another attempt - masonry doesnt work</h3>
     <div class="container">
         <div class="row">
-            <div class="col col-xs-12 col-sm-12 col-md-6 col-lg-6 p-4 bg-warning-subtle" ></div>
-            <div class="col col-xs-12 col-sm-12 col-md-6 col-lg-6 p-4 border-border-4 bg-warning"></div>
+            <div class="col-12 bg-warning" style="height: 30px;"></div>
         </div>
-<div class="row">
-    <div class="col p-4 bg-danger "></div>
-</div>
-<div class="row">
-    <div class="col col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 p-4  bg-info"></div>
-    <div class="col col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 p-4  bg-info-subtle"></div>
-    <div class="d-sm-none d-sm-none d-md-none d-lg-block col-lg-4 col-xl-4 p-4  bg-info"></div>
-</div>
+        <div class="row" data-masonry='{"percentPosition": true }'>
+            <div class="col-lg-12 col-md-9" style="background-color: orange; height: 60px;"></div>
+            <div class="col=lg-9 col-md-12" style="background-color: yellow; height:60px;"></div>
+            <div class="col-3 bg-success" style="height: 60px;"></div>
+            <div class="col-3" style="background-color: blue; height: 60px;"></div>
+            <div class="col-9" style="background-color: fuchsia; height:80px;"></div>
+        </div>
+
+
     </div>
-
-
+    <h1 style="color: red">EXERCISE 5 </h1>
     
 </body>
 
