--- a/htmlmodulehomework6INDEX.html
+++ b/htmlmodulehomework6INDEX.html
@@ -27,7 +27,7 @@
         <div class="navbar bg-body-secondary m-5" role="navigation">
             <div class="container-fluid">
                 <ul class="nav mx-5">
-                    <li class="nav-item mx-5"><a href=""><button
+                    <li class="nav-item mx-5"><a href="https://elalitvin.github.io/htmlhomework6TABLE.html"><button
                                 class="btn btn-danger mx-4 my-2 px-4">table</button></a></li>
                     <li class="nav-item mx-5"><a href=""><button class="btn btn-danger mx-4 my-2 px-4">form</button></a>
                     </li>
