--- a/htmlhomework6TABLE.html
+++ b/htmlhomework6TABLE.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>table page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -15,7 +15,7 @@
 <body>
     <p class="h1 text-center text-capitalize my-4">table</p>
     <div class="container w-75">
-        <table class="table table-align-middle table-hover" >
+        <table class="table table-align-middle table-hover">
             <thead class="table-dark">
                 <tr>
                     <th>Name</th>
