--- a/HTMLMODULEHomeExercise6.html
+++ b/HTMLMODULEHomeExercise6.html
@@ -325,6 +325,7 @@
 
     </div>
     <h1 style="color: red">EXERCISE 5 </h1>
+    <iframe  height="700px" width="100%" src="https://elalitvin.github.io/htmlmodulehomework6INDEX.html" allowfullscreen></iframe>
     
 </body>
 
