--- a/htmlmodulehomework6INDEX.html
+++ b/htmlmodulehomework6INDEX.html
@@ -29,7 +29,7 @@
                 <ul class="nav mx-5">
                     <li class="nav-item mx-5"><a href="https://elalitvin.github.io/htmlhomework6TABLE.html"><button
                                 class="btn btn-danger mx-4 my-2 px-4">table</button></a></li>
-                    <li class="nav-item mx-5"><a href=""><button class="btn btn-danger mx-4 my-2 px-4">form</button></a>
+                    <li class="nav-item mx-5"><a href="https://elalitvin.github.io//htmlmodulehomework6FORM.html"><button class="btn btn-danger mx-4 my-2 px-4">form</button></a>
                     </li>
                     <li class="nav-item mx-5"><a href="https://elalitvin.github.io/htmlmodulehomework6GRID.html"><button class="btn btn-danger mx-4 my-2 px-4">grid</button></a>
                     </li>
