--- a/masonryAttempt.html
+++ b/masonryAttempt.html
@@ -11,6 +11,19 @@
 
 </head>
 <body>
-    
+    <div class="container" >
+        <div class="row" data-masonry='{"percentPosition": true }'>
+            <div class="col-3" style="background-color: red; height:200px"></div>
+            <div class="col-3" style="background-color: blue; height: 100px"></div>
+            <div class="col-3" style="background-color: yellow;height: 300px"></div>
+            <div class="col-3" style="background-color: green; height: 150px"></div>
+        </div>
+        <div class="row" data-masonry='{"percentPosition": true }'>
+            <div class="col-3" style="background-color: brown; height: 100px"></div>
+            <div class="col-3" style="background-color: yellowgreen; height: 250px"></div>
+            <div class="col-3" style="background-color: purple; height: 50px"></div>
+            <div class="col-3" style="background-color: peru; height: 100px"></div>
+        </div>
+    </div>
 </body>
 </html>
