--- a/HTMLMODULEHomeExercise5.html
+++ b/HTMLMODULEHomeExercise5.html
@@ -23,7 +23,7 @@
 
         <h1 style="color: red">EXERCISE 2</h1>
         <p class="h3 mx-3 text-capitalize">user input</p>
-        <p class="mx-3">Use ls to list all files in the current directory. <br>
+        <p class="mx-3">Use <kbd>ls</kbd> to list all files in the current directory. <br>
             To copy files, select the files and press <kbd>ctrl + c</kbd> <br>
             To paste files, select the files and press <kbd>ctrl + v</kbd>
         </p>
