--- a/htmlmodule2HomeExercise.html
+++ b/htmlmodule2HomeExercise.html
@@ -107,9 +107,9 @@
     <h1>Lets go somewhere</h1>
     <form id="LetsGoSomewhere">
         <label for="FirstName">First name</label>
-        <input type="text" id="FirstName" autofocus><br>
-        <label for="FamilyName">Family name</label>
-        <input type="text" id="FamilyName" placeholder="Put your family name here"><br>
+        <input type="text" id="FirstName" autofocus required><br>
+        <label for="FamilyName" >Family name</label>
+        <input type="text" id="FamilyName" placeholder="Put your family name here" required><br>
         <p>Gender:
             <label for="YourGender">Male</label>
             <input type="radio" id="YourGender" name="Gend">
