--- a/HTMLMODULE1HomeExercise.html
+++ b/HTMLMODULE1HomeExercise.html
@@ -103,14 +103,17 @@
 </ul>
 <hr>
 <p style="background-color: yellow;">I need please help with it, dint understand why not all the links work with &lt;video&GT; tag :(</p>
-<video width="300px" height="200px" controls="controls">
-    <source src="https://img-9 gag-fun.9cache.com/photo/aWG5pgn_460svvp9.webm" type="video/mp4">
-</video><br>
 
-<video width="400px" height="300px" controls="controls">  <!--I dont understand why it doesnt work-->
+<iframe width="999" height="416" src="https://www.youtube.com/embed/_8EokLztgMo" title="Céline Dion - Imperfections (Official Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+
+<!--
+<video width="400px" height="300px" controls="controls">  
     <source src="https://youtu.be/_8EokLztgMo" type="video/mp4">
 </video><br>
+-->
 
+<iframe width="780" height="438" src="https://www.youtube.com/embed/3PFgbLnUcZE" title="Céline Dion - I Surrender (from the 2007 DVD &quot;Live In Las Vegas - A New Day...&quot;)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 <video width="320" height="190" controls="controls">
     <source src="https://media.istockphoto.com/id/1586899577/video/asian-computer-engineer-using-program-for-system-control.mp4?s=mp4-640x640-is&k=20&c=25vAnM_I6Kn_7UxvQba116uu7f2mcVJ6oZWhzDwB5I4=" type="video/mp4">
