--- a/HWjavascript031223.html
+++ b/HWjavascript031223.html
@@ -152,7 +152,7 @@
         document.write('<br>')
     </script>
     <script>
-        document.write('another try')
+        document.write('another attempt')
         const numbersArrayyy = [1, 13, 22, 123, 49, 34, 5, 24, 57, 45]
         let suum = 0;
             for (let i = 0; i <= numbersArrayyy.length; i++) {
