--- a/HWjavascript171223.html
+++ b/HWjavascript171223.html
@@ -82,7 +82,8 @@
 
 
     <h2>Exercise 4</h2>
-
+<p>I have written the code, its not seen because of the previous exercise</p>
+    
     <script>
         number_of_students = parseInt(prompt('enter a number of students '))
         grades = new Array(number_of_students).fill(0)
